--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <body>
     <!-- Sport GIF Buttons -->
-    <div id="sportButtons">
-
+    <div id="startingButtons">
+        <div id="addButton">  
+        </div>
     </div>
 
     <!-- Add Sport Form -->
@@ -25,7 +26,7 @@
     <label for="sport-input">Add a Sport</label>
     <input type="text" id="sport-input">
     <br>
-    <input id="addSport" type="submit" value="Submit">
+    <input id="addSport" type="submit" value="Add">
     </form>
 
     <div id="sport">
