--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sports GIFs</title>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <!-- External Stylesheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Reset CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
 </head>
 
 <body>
+    <h1>Sports GIFs</h1>
+    <br>
+    <h2>Click a button to display GIFs from that sport, or choose your own!</h2>
     <!-- Sport GIF Buttons -->
     <div id="addButton">  
     </div>
@@ -22,7 +28,7 @@
 
     <!-- Add Sport Form -->
     <form id="sport-form">
-    <label for="sport-input">Add a Sport</label>
+    <label for="sport-input">Add a Sport: </label>
     <input type="text" id="sport-input">
     <br>
     <input id="addSport" type="submit" value="Add">
